# terminalbot

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  apikeys.h.sample  apitest.sh  checkwsl.sh  cloc.sh  cmake_install.cmake  compile.sh  config.h  install.txt  main.cpp
docs/: README.md  README.md.autosave  _config.yml  configure.md  configure.md.autosave  details.md  index.md  install.md  troubleshooting.md
docs/_data/: navigation.yml
docs/_includes/: nav.html
docs/_layouts/: default.html
inc/: binance.h  common.h  csv.h  digits.h  http.h  screen.h  timers.h  tui.h
